

-----
**NOTE:** Since the configuration file has been updated it is recommended to
install the new default config file and re-apply local config changes manually.

-----


Detailed user visible changes
-----------------------------
- Manual updated to RA15 to reflect changes in 3.2.0

- Added smart context sensitive command completion in the command shell 
  invoked by the tab-key

- Mail templates slightly updated with new look & feel

- Mail templates updated to try to circumvent Googles stupidity in auto-trimming
  of mails when the mail recipient uses a GMail account. This is not a 100% fix
  since Gmails auto-trimming is insanely diabolic.

- Added options "include_minimap" to enable the inclusion of a small static map
  showing the current location (with both an overview and a detailed map) the the
  notification mail. The exact meaning of these parameters are described in the
  manual and in the config file.

- Adds full UTF-8 support in order to better handle addresses from Google

- Added a new cache for the minimap images which are stored i the standard
  variable data files directory (defaults to /var/lib/g7ctrl) if not otherwise
  adjusted by the configuration. The same approximation as for the address
  is used.

- Added server command ".cachestat" to return statistics on cache hits and
  usage.

- Added server command ".date"

- Added server command ".address" to toggle address lookup when storing
  locations in DB. Default value on startup is read from the configuration file.

- Added server command "db sort [arrival|device]" to specify sort order for
  "db head" and "db tail" commands.

- Added "subject_prefix" setting the configuration file to allow customization
  of the prefix used in the subject header for all mails sent from the daemon.

- The calls to Google lookup API:s are now throttled not to exceed the rate
  limit for anonymous calls that Google enforces (5 QPS).